ApiGateway services user GettAllUsers GetById success
