# ApiGateway/docs/swagger.yaml
@@ -40,6 +40,46 @@ info:
   title: microservice-grpc
   version: "1.0"
 paths:
+  /api/v1/user/{id}:
+    get:
+      consumes:
+      - application/json
+      description: GetByID
+      operationId: GetByID
+      parameters:
+      - description: id of user to be get
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "201":
+          description: Create Ok
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: GetByID
+      tags:
+      - User
   /api/v1/user/login:
     post:
       consumes:
@@ -120,6 +160,40 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Register
+      tags:
+      - User
+  /api/v1/users:
+    get:
+      consumes:
+      - application/json
+      description: GetAllUser
+      operationId: GetAllUser
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "201":
+          description: Create Ok
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: GetAllUser
       tags:
       - User
 swagger: "2.0"
